--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "firebase": "^3.5.0",
     "jquery": "^3.1.1",
-    "vue": "^2.0.3"
+    "vue": "^2.0.3",
+    "vue-router": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
