--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "firebase": "^3.5.0",
+    "fs-extra": "^0.30.0",
     "jquery": "^3.1.1",
     "vue": "^2.0.3",
     "vue-router": "^2.0.1"
